--- a/style.css
+++ b/style.css
@@ -15,6 +15,9 @@ body {
 /* ===============================MAIN============================ */
 main {
     position: relative;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
 }
 
 main h2 {
